--- a/scss/categories/categories.scss
+++ b/scss/categories/categories.scss
@@ -55,7 +55,7 @@
 }
 
 .navigation-container {
-  border-bottom: none;
+  border-bottom: 0 !important;
   position: relative;
   &::after {
     content: "";
